--- a/lib/locale/arb_files/intl_en.arb
+++ b/lib/locale/arb_files/intl_en.arb
@@ -13,5 +13,7 @@
         }
     },
     "new_game": "New game",
-    "close": "Close"
+    "close": "Close",
+    "name_label_player_1" : "Player 1 name",
+    "name_label_player_2" : "Player 2 name"
 }
